package creational.factory.shape;

public enum ShapeType {
    RECTANGLE, TRIANGLE, CIRCLE
}
